Lots of changes, I don't remember what, WIP

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,11 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Podkova&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
+  <link href="./all.css" rel="stylesheet">
+  <!--load all styles -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Note-taking, life-management, knowledge bank app" />
@@ -27,7 +24,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script src="https://kit.fontawesome.com/2cfc214efa.js" crossorigin="anonymous"></script>
   <title>Pillowbook</title>
 </head>
 
