--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link href="./all.css" type="text/css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/all.css" type="text/css" rel="stylesheet">
   <!--load all styles -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
